add unspecified option
